# integra-te_project

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AI_USAGE.md  ARCHITECTURE.md  CMS_USER_GUIDE.md  CONTRIBUTORS.md  CRUD_IMPLEMENTATION_GUIDE.md  DASHBOARD_CRUD_TODO.md  DELIVERABLES_FASE_1.md  DELIVERABLES_FASE_2.md  Makefile  README.md  compose.dev.yaml  compose.prod.yaml  package-lock.json
.claude/: settings.local.json
.devcontainer/: devcontainer-lock.json  devcontainer.json
docs/: AI_USAGE.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_FASE3.md  CMS_USER_GUIDE.md  (+3 more)
srcs/backend/: pyproject.toml  requirements.txt
srcs/backend/core/: settings.py  urls.py
srcs/backend/integrate/: admin.py  apps.py  auth_views.py  authentication.py  models.py  serializers.py  tests.py  urls.py  views.py
srcs/backend/integrate/migrations/: 0001_initial.py  0002_remove_jogo_tipo_remove_materialoriginal_criado_em_and_more.py  0003_aula_exercicio.py  0004_aula_add_ficheiro.py  0005_exercicio_jogo_aula_fields.py  0006_remove_aula_duration_remove_exercicio_duration_and_more.py  0007_add_thumbnail_imagefield.py  0008_aula_created_by_aula_updated_by_conteudo_created_by_and_more.py  0009_delete_materialoriginal.py
srcs/backend/tests/: audio_test.webm  audio_test2.webm  test_integrate.py  test_search.py  test_voice_app.py  voice_app_test.py
srcs/backend/voice_search/: Makefile  README.md  apps.py  models.py  urls.py  views.py
srcs/backend/voice_search/management/commands/: embed_object.py
srcs/backend/voice_search/migrations/: 0001_initial.py
(+123 files in other folders)
